# routes/categories.js
@@ -3,15 +3,16 @@ const router = express.Router();
 
 const categoriesController = require('../controllers/categories');
 const validation = require('../middleware/validate');
+const { isAuthenticated } = require('../middleware/auth');
 
 router.get('/', categoriesController.getAll);
 
 router.get('/:id', categoriesController.getSingle);
 
-router.post('/', validation.saveCategory, categoriesController.createCategory);
+router.post('/', isAuthenticated, validation.saveCategory, categoriesController.createCategory);
 
-router.put('/:id', validation.saveCategory, categoriesController.updateCategory);
+router.put('/:id', isAuthenticated, validation.saveCategory, categoriesController.updateCategory);
 
-router.delete('/:id', categoriesController.deleteCategory);
+router.delete('/:id', isAuthenticated, categoriesController.deleteCategory);
 
 module.exports = router;
