# routes/index.js
@@ -7,6 +7,8 @@ router.get('/', (req, res) => {
     res.send('Products API - Welcome!');
 });
 
+router.use('/auth', require('./auth'));
+
 router.use('/products', require('./products'));
 router.use('/categories', require('./categories'));
 
