# routes/products.js
@@ -3,15 +3,16 @@ const router = express.Router();
 
 const productsController = require('../controllers/products');
 const validation = require('../middleware/validate');
+const { isAuthenticated } = require('../middleware/auth');
 
 router.get('/', productsController.getAll);
 
 router.get('/:id', productsController.getSingle);
 
-router.post('/', validation.saveProduct, productsController.createProduct);
+router.post('/', isAuthenticated, validation.saveProduct, productsController.createProduct);
 
-router.put('/:id', validation.saveProduct, productsController.updateProduct);
+router.put('/:id', isAuthenticated, validation.saveProduct, productsController.updateProduct);
 
-router.delete('/:id', productsController.deleteProduct);
+router.delete('/:id', isAuthenticated, productsController.deleteProduct);
 
 module.exports = router;
